--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Angular4app</title>
-  <base href="/">
+<!DOCTYPE html>
+<html>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+	<title>ng2-nouislider</title>
 </head>
+
 <body>
-  <app-root></app-root>
+	<div class="jumbotron">
+		<div class="container">
+			<h2>ng2-nouislider demos</h2>
+			<a href="https://github.com/tb/ng2-nouislider" class="btn btn-default btn-xs">Back to GitHub</a>
+			<a href="https://travis-ci.org/tb/ng2-nouislider"><img src="https://travis-ci.org/tb/ng2-nouislider.svg?branch=master"></a>
+			<a href="https://badge.fury.io/js/ng2-nouislider"><img src="https://badge.fury.io/js/ng2-nouislider.svg" alt="npm version" height="18"></a>
+			<a href="https://npmjs.org/package/ng2-nouislider"><img src="http://img.shields.io/npm/dm/ng2-nouislider.svg" alt="npm version" height="18"></a>
+		</div>
+	</div>
+	<div class="container">
+		<app>
+			<br>
+			<br>
+			<p>Loading...</p>
+		</app>
+	</div>
+	<script src="bundle.js"></script>
 </body>
+
 </html>
