--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,9 @@
 		</div>
 	</div>
 	<div class="container">
-		<app>
-			<br>
-			<br>
-			<p>Loading...</p>
-		</app>
+		<app-v5-integrate></app-v5-integrate>
 	</div>
-	<script src="bundle.js"></script>
+	
 </body>
 
 </html>
